# DeepTactics-Trackmania

./: .env.example  .gitignore  404.html  MessageTypeDocumentation.md  README.md  TRACKMANIA_SETUP.md  TRAINING_FAILURE_ANALYSIS.md  create_configs.py  diagnose_checkpoint.py  index.html  main.py  objects.inv  pyproject.toml  pyproject.toml~e2994c7df0fdaa49b13fc67c6a4d2bd45667486e  pyproject_mac.toml  requirements.txt  run_iqn_all.bat  run_iqn_server.bat  run_iqn_trainer.bat  run_iqn_worker.bat  run_slurm.sh  run_slurm.slurm  tmtest.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
SimpleDQN/: DQN.py  env.py  main.py
benchmarks/: tau_value_generation.py
config_files/: config.jason.example  config.py  static_config.py  static_tm_config.py  tm_config.py  user_config.py
config_files/params/: Enviroments.json  Learners.json  Training.json
docs/: TMRL_CONFIG_REFERENCE.md  TMRL_SETUP.md
reference/src/: index.html
reference/src/DQN/: index.html
reference/src/IQN/: index.html
reference/src/env/: index.html
search/: search_index.json
src/: Ant_env.py  DQN.py  IQN.py  IQN_cnn.py  env.py  env_tm.py  experience.py  map_loader.py  replay_buffer.py  trackmania_env.py  train_trackmania.py
src/agents/: DQN.py  IQN.py  impala_cnn_block.py  rainbow.py  rainbow_tm.py
src/helper_functions/: ant_wrappers.py  tm_actions.py  tm_checkpointing.py
src/learners/: DQN.py  IQN.py
src/trackmania/: Python_Link.as  __init__.py  map_loader.py  tminterface.py
src/trackmania_interface/: game_instance_manager.py  tminterface2.py
tests/: test_checkpoint_loading.py  test_config.py  tmtest.py
tmrl/: REFACTORED_STRUCTURE.md  custom_actor_module.py  run_iqn.py
tmrl/config/: iqn_config.py
tmrl/models/: __init__.py  iqn_actor.py  iqn_actor_critic.py  iqn_critic.py  iqn_network.py
tmrl/training/: __init__.py  iqn_training_agent.py  per_training_offline.py  prioritized_memory.py
tmrl/utils/: __init__.py  nn_utils.py  serialization.py
tmrl_custom/: IQN.py  env.py
tmrl_imp/: IQN.py  env.py
trackmania_interface/: game_instance_manager.py  tminterface2.py
