[project]
name = "PROJECT-TEMPLATE"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = [
    "gymnasium[box2d,classic-control,other]>=1.2.0",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pre-commit>=4.3.0",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.2",
    "tminterface>=1.0.2",
    "torch>=2.8.0",
    "wandb>=0.22.0",
    "pywin32>=311; sys_platform == 'win32'",
    "pygbx>=0.3; sys_platform == 'linux'",
    "swig>=4.3.1.post0",
    "box2d>=2.3.10",
    "torchrl>=0.10.0",
    "pygbx>=0.3",
    "python-libxdo>=0.1.2a1",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.3.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

