[project]
name = "Cogito-Trackmania"
version = "0.1.0"
requires-python = ">=3.13.0"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-triton-rocm>=3.3.0; sys_platform == 'linux'",
  "gymnasium[box2d,classic-control,other]>=1.2.2",
  "torchrl>=0.10.1",
  "box2d>=2.3.10",
  "psutil>=7.1.3",
  "numpy>=2.3.4",
  "numba>=0.62.1",
  "tmrl",
  "scikit-learn>=1.7.2",
  "wandb>=0.22.3",
  "pre-commit>=4.3.0",
  "swig>=4.4.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'win32'" }
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

tmrl = { git = "https://github.com/EldarAlvik/tmrl.git" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
