[project]
name = "Trackmania-Cogito"
version = "0.1.0"
requires-python = ">=3.13.0"
dependencies = [
  "monai",
  "torch",
  "torchvision",
  "torchrl",
  "numpy",
  "numba",
  "scikit-learn",
  "wandb",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
